Moved index.html to root for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Palkhi 2025 | Dashboard</title>
-  <link rel="stylesheet" href="../css/index.css" />
-  <script src="../js/index.js" defer></script>
+  <link rel="stylesheet" href="./dashboard/css/index.css" />
+  <script src="./dashboard/js/index.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,16 +19,16 @@
   
   <nav class="navbar">
     <ul>
-      <li><a href="dindis.html">Dindis</a></li>
-      <li><a href="transport.html">Transport</a></li>
-      <li><a href="foodwater.html">Food & Water</a></li>
-      <li><a href="volunteers.html">Volunteers</a></li>
-      <li><a href="cultural.html">Cultural</a></li>
-      <li><a href="medical.html">Medical</a></li>
-      <li><a href="security.html">Security</a></li>
-      <li><a href="route.html">Route</a></li>
-      <li><a href="donations.html">Donations</a></li>
-      <li><a href="environment.html">Environment</a></li>
+      <li><a href="./dashboard/pages/dindis.html">Dindis</a></li>
+      <li><a href="./dashboard/pages/transport.html">Transport</a></li>
+      <li><a href="./dashboard/pages/foodwater.html">Food & Water</a></li>
+      <li><a href="./dashboard/pages/volunteers.html">Volunteers</a></li>
+      <li><a href="./dashboard/pages/cultural.html">Cultural</a></li>
+      <li><a href="./dashboard/pages/medical.html">Medical</a></li>
+      <li><a href="./dashboard/pages/security.html">Security</a></li>
+      <li><a href="./dashboard/pages/route.html">Route</a></li>
+      <li><a href="./dashboard/pages/donations.html">Donations</a></li>
+      <li><a href="./dashboard/pages/environment.html">Environment</a></li>
     </ul>
   </nav>
 
