adding plz wait

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
   </section>
 
   
-  <section class="features" id="features">
-    <h2> Key Dashboard Sections</h2>
-    <div class="cards">
-      <div class="card">Dindi Participation</div>
-      <div class="card">Transport Logistics</div>
-      <div class="card">Food & Water</div>
-      <div class="card">Volunteers</div>
-      <div class="card">Cultural Programs</div>
-      <div class="card">Medical Help</div>
-      <div class="card">Security Plans</div>
-      <div class="card">Route Mapping</div>
-      <div class="card">Donations & Finance</div>
-      <div class="card">Environmental Impact</div>
-    </div>
-  </section>
+ <section class="features" id="features">
+  <h2>Key Dashboard Sections</h2>
+  <div class="cards">
+    <a href="dashboard/pages/dindis.html" class="card">Dindi Participation</a>
+    <a href="dashboard/pages/transport.html" class="card">Transport Logistics</a>
+    <a href="dashboard/pages/food.html" class="card">Food & Water</a>
+    <a href="dashboard/pages/volunteers.html" class="card">Volunteers</a>
+    <a href="dashboard/pages/cultural.html" class="card">Cultural Programs</a>
+    <a href="dashboard/pages/medical.html" class="card">Medical Help</a>
+    <a href="dashboard/pages/security.html" class="card">Security Plans</a>
+    <a href="dashboard/pages/route.html" class="card">Route Mapping</a>
+    <a href="dashboard/pages/donations.html" class="card">Donations & Finance</a>
+    <a href="dashboard/pages/environment.html" class="card">Environmental Impact</a>
+  </div>
+</section>
 
   
   <section class="about" id="about">
