--- a/dashboard/pages/route.html
+++ b/dashboard/pages/route.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Route Details - Palkhi 2025</title>
-  <link rel="stylesheet" href="../css/dindis.css">
+
+  <!-- Local CSS (Fix Path for GitHub Pages) -->
+  <link rel="stylesheet" href="../css/dindis.css" />
+
+  <!-- External Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+
 </head>
 <body>
   <header>
@@ -52,6 +58,7 @@
     &copy; 2025 Palkhi Yatra | Route Intelligence Dashboard
   </footer>
 
-  <script src="../js/route.js"></script>
+  <!-- Fix JS Path for GitHub Pages -->
+  <script src="../js/route.js" defer></script>
 </body>
 </html>
