--- a/dashboard/pages/route.html
+++ b/dashboard/pages/route.html
@@ -3,26 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Route Details - Palkhi 2025</title>
-
-  <!-- Local CSS (Fix Path for GitHub Pages) -->
+  <title>Route Details | Palkhi 2025</title>
   <link rel="stylesheet" href="../css/dindis.css" />
-
-  <!-- External Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-
+  <script src="../js/route.js" defer></script>
 </head>
 <body>
   <header>
     <h1>Route Details</h1>
-    <p class="subtitle">Interactive map and charts showing the full path of the Palkhi Yatra</p>
+    <div class="subtitle">All route paths, terrain, timing, and logistics for the Palkhi journey</div>
   </header>
 
   <section class="table-container">
-    <h2>All Route Segments</h2>
-    <table id="routeTable">
+    <table>
       <thead>
         <tr>
           <th>Route ID</th>
@@ -31,34 +24,33 @@
           <th>Distance (km)</th>
           <th>Time (min)</th>
           <th>Terrain</th>
-          <th>Highway</th>
-          <th>Road Condition</th>
+          <th>Highway?</th>
+          <th>Road</th>
           <th>Safety</th>
           <th>Day</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody id="route-table-body">
+        <!-- Filled dynamically -->
+      </tbody>
     </table>
   </section>
 
   <section class="chart-box">
-    <h2>Route Map</h2>
-    <div id="map" style="height: 400px;"></div>
-  </section>
-
-  <section class="chart-box">
-    <h2>Route Statistics</h2>
     <canvas id="terrainChart"></canvas>
-    <canvas id="safetyChart" style="margin-top: 30px;"></canvas>
-    <canvas id="distanceChart" style="margin-top: 30px;"></canvas>
-    <canvas id="radarChart" style="margin-top: 30px;"></canvas>
+  </section>
+  <section class="chart-box">
+    <canvas id="distanceTimeChart"></canvas>
+  </section>
+  <section class="chart-box">
+    <canvas id="roadConditionChart"></canvas>
+  </section>
+  <section class="chart-box">
+    <canvas id="highwayChart"></canvas>
   </section>
 
   <footer>
-    &copy; 2025 Palkhi Yatra | Route Intelligence Dashboard
+    &copy; 2025 Palkhi Dashboard | Route Insights & Mapping
   </footer>
-
-  <!-- Fix JS Path for GitHub Pages -->
-  <script src="../js/route.js" defer></script>
 </body>
 </html>
