--- a/dashboard/pages/dindis.html
+++ b/dashboard/pages/dindis.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="../css/dindis.css"/>
 </head>
 <body>
+  
   <header>
     <h1>Sant Tukaram Maharaj Dindi Participation</h1>
     <p class="subtitle">Traditional Insights | Animated Dashboard | Real Data</p>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <main>
     <section id="table-section">
       <h2>Participation Table</h2>
