--- a/dashboard/pages/environment.html
+++ b/dashboard/pages/environment.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="../css/dindis.css" />
 </head>
 <body>
+  
   <header>
     <h1> Environmental Impact Report - Palkhi 2025</h1>
     <p class="subtitle">Real-time eco-data monitoring during the wari</p>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <section>
     <h2> Summary Table</h2>
     <div class="data-table">
