--- a/dashboard/pages/foodwater.html
+++ b/dashboard/pages/foodwater.html
@@ -10,7 +10,8 @@
   <header class="page-header">
     <h1> Food & Water Distribution Dashboard</h1>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <main class="main-content">
     <section class="data-table-section">
       <h2>Distribution Records Table</h2>
