--- a/dashboard/pages/route.html
+++ b/dashboard/pages/route.html
@@ -13,7 +13,8 @@
     <h1>Route Details</h1>
     <div class="subtitle">All route paths, terrain, timing, and logistics for the Palkhi journey</div>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <section class="table-container">
     <table>
       <thead>
