--- a/dashboard/pages/security.html
+++ b/dashboard/pages/security.html
@@ -11,7 +11,8 @@
     <h1>Security Arrangements</h1>
     <p class="subtitle">Real-time Patrol & Crowd Safety Info</p>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <section class="table-container">
     <h2>Security Deployment Table</h2>
     <table id="securityTable">
