--- a/dashboard/pages/transport.html
+++ b/dashboard/pages/transport.html
@@ -12,7 +12,8 @@
   <header class="page-header">
     <h1> Transport Logistics Dashboard</h1>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <main class="main-content">
     <section class="data-table-section">
       <h2>Convoy Transport Table</h2>
