--- a/dashboard/pages/cultural.html
+++ b/dashboard/pages/cultural.html
@@ -9,11 +9,13 @@
   <script src="../js/cultural.js" defer></script>
 </head>
 <body>
+  
   <header>
     <h1>Cultural Events Dashboard</h1>
     <p class="subtitle">Celebrating traditions through vibrant performances</p>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <section class="table-container">
     <h2 style="text-align:center;">All Cultural Events</h2>
     <table id="eventsTable">
