--- a/dashboard/pages/donations.html
+++ b/dashboard/pages/donations.html
@@ -12,7 +12,8 @@
   <h1>Donations & Financials Overview</h1>
   <p class="subtitle">Tracking funds, expenses, and community support across villages</p>
 </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
 <section class="table-container">
   <h2>Donation Records</h2>
   <table id="donationTable">
