--- a/dashboard/pages/medical.html
+++ b/dashboard/pages/medical.html
@@ -12,7 +12,8 @@
     <h1>Medical Support Centers</h1>
     <p class="subtitle">Live Health Infrastructure & Emergency Insights</p>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <section class="table-container">
     <h2>All Medical Centers</h2>
     <table id="medicalTable">
