--- a/dashboard/pages/volunteers.html
+++ b/dashboard/pages/volunteers.html
@@ -13,7 +13,8 @@
     <h1>Volunteers Dashboard</h1>
     <p class="subtitle">Detailed Overview of Volunteer Contributions</p>
   </header>
-
+<div id="navbar-container"></div>
+  <script src="../js/navbar.js"></script>
   <section class="table-container">
     <h2 style="text-align:center;">Volunteers Overview</h2>
     <table id="volunteersTable">
