--- a/dashboard/pages/navbar.html
+++ b/dashboard/pages/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar">
   <div class="nav-logo">Palkhi 2025</div>
   <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="../../index.html">Home</a></li>
     <li><a href="dindis.html">Dindis</a></li>
     <li><a href="transport.html">Transport</a></li>
     <li><a href="volunteers.html">Volunteers</a></li>
