--- a/dashboard/pages/dindis.html
+++ b/dashboard/pages/dindis.html
@@ -28,6 +28,19 @@
     </section>
   </main>
 
+
+  <!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset captures detailed information about the 30 Dindis (devotional groups) participating in the Sant Tukaram Palkhi 2025 procession. It includes the origin villages, total number of participants, age group distributions, gender ratios, and traditional musical instruments used by each group. The dataset also records how many years each Dindi has participated, along with group leaders and contact information. These insights help in understanding the scale, diversity, cultural richness, and continuity of this historic spiritual movement.
+    </p>
+  </div>
+</section>
+
+
   <footer>
     <p> 2025 Palkhi Dashboard | Built with  by Kaiwalya</p>
   </footer>
