--- a/dashboard/pages/donations.html
+++ b/dashboard/pages/donations.html
@@ -52,6 +52,19 @@
   <canvas id="radarChart" height="200"></canvas>
 </section>
 
+
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset records financial donations received and expenses incurred across different villages during the Palkhi 2025 Yatra. It includes donor types (individual, community, sponsor), amounts, expense categories, and running balances. This transparency helps ensure financial accountability and provides a clearer picture of the scale and support behind the event.
+    </p>
+  </div>
+</section>
+
+
 <footer>
   &copy; 2025 Palkhi Dashboard | Donations and Financials Analytics
 </footer>
