--- a/dashboard/pages/environment.html
+++ b/dashboard/pages/environment.html
@@ -58,6 +58,19 @@
     </div>
   </section>
 
+
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset tracks the sustainability efforts and environmental impact during the Palkhi 2025 procession. It includes metrics like plastic waste collected, number of eco-volunteers involved, awareness campaigns held, and green initiatives per village. These insights help measure progress toward a cleaner and more responsible pilgrimage experience.
+    </p>
+  </div>
+</section>
+
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="../js/environment.js"></script>
 </body>
