--- a/dashboard/pages/foodwater.html
+++ b/dashboard/pages/foodwater.html
@@ -32,6 +32,19 @@
     </section>
   </main>
 
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset contains records of food and water supplies distributed during the Palkhi 2025 event. It tracks distribution points, quantities, times, responsible teams, source villages, and feedback from recipients. The data ensures transparency, helps prevent shortages, and contributes to the smooth management of basic necessities throughout the yatra.
+    </p>
+  </div>
+</section>
+
+
+
   <footer class="page-footer">
     <p>&copy; 2025 Palkhi Dashboard | Designed with  by Kaiwalya</p>
   </footer>
