--- a/dashboard/pages/security.html
+++ b/dashboard/pages/security.html
@@ -51,6 +51,19 @@
     <canvas id="secureChart"></canvas>
   </section>
 
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset outlines the security measures taken during the Palkhi 2025 procession. It includes deployment details of police personnel, private volunteers, checkpoints, surveillance areas, crowd control zones, and emergency response units. By analyzing this data, organizers can ensure the safety of devotees, maintain order during large gatherings, and improve preparedness for any unforeseen incidents along the yatra route.
+    </p>
+  </div>
+</section>
+
+
+
   <footer>
     &copy; 2025 Palkhi Data Intelligence | Security Monitoring System
   </footer>
