--- a/dashboard/pages/transport.html
+++ b/dashboard/pages/transport.html
@@ -34,6 +34,19 @@
     </section>
   </main>
 
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset details the transport convoys used during the Palkhi 2025 procession. It includes vehicle types, origin and destination villages, departure and arrival times, cargo types, drivers, and whether the vehicle is heavy-duty or carrying sensitive materials. The travel duration and route types help in optimizing logistics, managing fuel, and ensuring the timely and safe transport of goods and services across the pilgrimage route.
+    </p>
+  </div>
+</section>
+
+
+
   <footer class="page-footer">
     <p>&copy; 2025 Palkhi Dashboard | Designed with  by Kaiwalya</p>
   </footer>
