--- a/dashboard/pages/volunteers.html
+++ b/dashboard/pages/volunteers.html
@@ -41,6 +41,19 @@
     <canvas id="motivationChart"></canvas>
   </section>
 
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset covers all volunteer groups contributing to the Palkhi 2025 Yatra. It includes their names, roles (medical, food distribution, logistics, crowd control, etc.), origin villages, team sizes, contact details, and assigned locations. Understanding volunteer deployment helps in managing manpower, ensuring safety, and recognizing the enormous community effort behind the successful execution of the event.
+    </p>
+  </div>
+</section>
+
+
+
   <footer>
     &copy; 2025 Dindi Dashboard | Volunteers Module
   </footer>
