--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Palkhi 2025 | Dashboard</title>
   <link rel="stylesheet" href="dashboard/css/index.css" />
-  <script src="Palkhi2025-DS-Project/dashboard/js/index.js" defer></script>
+  <script src="dashboard/js/index.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -49,7 +49,7 @@
   <div class="cards">
     <a href="dashboard/pages/dindis.html" class="card">Dindi Participation</a>
     <a href="dashboard/pages/transport.html" class="card">Transport Logistics</a>
-    <a href="dashboard/pages/food.html" class="card">Food & Water</a>
+    <a href="dashboard/pages/foodwater.html" class="card">Food & Water</a>
     <a href="dashboard/pages/volunteers.html" class="card">Volunteers</a>
     <a href="dashboard/pages/cultural.html" class="card">Cultural Programs</a>
     <a href="dashboard/pages/medical.html" class="card">Medical Help</a>
