--- a/dashboard/pages/cultural.html
+++ b/dashboard/pages/cultural.html
@@ -60,6 +60,19 @@
     <canvas id="timeOfDayChart"></canvas>
   </section>
 
+
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset showcases the various cultural and spiritual programs held during the Palkhi 2025 procession. It includes event names, timings, locations, organizing groups, expected audiences, and classification (music, dance, religious discourse, etc.). This data highlights the vibrant devotional culture and allows organizers to schedule and promote events more effectively.
+    </p>
+  </div>
+</section>
+
+
   <footer>
     &copy; 2025 Palkhi Data Dashboard | Cultural Heritage Unit
   </footer>
