--- a/dashboard/pages/medical.html
+++ b/dashboard/pages/medical.html
@@ -60,6 +60,19 @@
     <canvas id="radarChart"></canvas>
   </section>
 
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset provides details of the medical services arranged during Palkhi 2025. It includes mobile clinics, first-aid tents, doctors and medical volunteers, locations, number of patients treated, and types of common health issues observed. This helps in ensuring timely medical response, identifying high-risk zones, and planning for future healthcare needs.
+    </p>
+  </div>
+</section>
+
+
+
   <footer>
     &copy; 2025 Palkhi Data Dashboard | Health & Emergency Management
   </footer>
