--- a/dashboard/pages/route.html
+++ b/dashboard/pages/route.html
@@ -50,6 +50,19 @@
     <canvas id="highwayChart"></canvas>
   </section>
 
+<!-- ABOUT SECTION (Place just before footer) -->
+<section class="about-section">
+  <div class="about-container">
+    <h2 class="about-title">About This Dataset</h2>
+    <p class="about-text">
+      <!-- Dataset-specific info will go here -->
+This dataset provides information about the official Palkhi 2025 route including village stops, distances between halts, estimated travel times, and terrain types. It also highlights rest points, medical zones, and cultural activity locations. This data is essential for journey planning, real-time navigation, and optimizing the overall procession flow.
+    </p>
+  </div>
+</section>
+
+
+
   <footer>
     &copy; 2025 Palkhi Dashboard | Route Insights & Mapping
   </footer>
