--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="footer-links">
       <a href="#features">Dashboards</a>
       <a href="#about">About</a>
-      <a href="#">GitHub</a>
+<a href="https://github.com/Kaiwalya4275/Palkhi2025-DS-Project" target="_blank" rel="noopener noreferrer">GitHub</a>
     </div>
   </div>
 </footer>
